fix spacing req

--- a/src/components/layout/Requirements.css
+++ b/src/components/layout/Requirements.css
@@ -4,6 +4,7 @@
   width: 100%;
   overflow: hidden !important;
   background-color: rgb(24, 50, 91);
+  margin-bottom: 50px;
   /* background-image: linear-gradient(to right, rgb(4, 82, 206), rgb(29, 99, 211)); */
   /* border-radius: 0 190px 0 0; */
 }
